--- a/Weitianshi/pages/message/applyProject/applyProject.wxss
+++ b/Weitianshi/pages/message/applyProject/applyProject.wxss
@@ -1,7 +1,9 @@
 /* pages/message/applyProject/applyProject.wxss */
-page{
+
+page {
   background: #f3f4f8;
 }
+
 .swiper-tab {
   width: 100%;
   text-align: center;
@@ -234,7 +236,7 @@ page{
 }
 
 #introduce {
-  background: #f3f4f8;
+  background: #fafafa;
   border-radius: 4rpx 4rpx 0 0;
   font-size: 26rpx;
   color: #666;
@@ -250,10 +252,10 @@ page{
 }
 
 #introduce .introduce {
-  background:  #FAFAFA;
+  background: #fafafa;
   border-radius: 4rpx 4rpx 0 0;
   font-size: 26rpx;
-  color:#666666;
+  color: #666;
   line-height: 88rpx;
   text-align: left;
   height: 88rpx;
@@ -363,7 +365,7 @@ page{
   height: 68rpx;
   position: absolute;
   right: -2rpx;
-  top:-2rpx;
+  top: -2rpx;
 }
 
 .userPic {
