--- a/Weitianshi/pages/message/message/message.wxss
+++ b/Weitianshi/pages/message/message/message.wxss
@@ -54,7 +54,7 @@
 }
 
 .number {
-  margin-top: 10rpx;
+  /* margin-top: 10rpx; */
 }
 
 .netWorkNum {
@@ -64,7 +64,7 @@
   height: 40rpx;
   font-size: 24rpx;
   border-radius: 50%;
-  margin-left: 176rpx;
+  margin-left: 220rpx;
   line-height: 40rpx;
 }
 
@@ -81,7 +81,7 @@
   width: 12rpx;
   height: 20rpx;
   display: block;
-  padding: 0 8rpx;
+  padding: 10rpx 8rpx;
 }
 
 /*身份认证 */
