--- a/Weitianshi/pages/myProject/pushTo/pushTo.wxss
+++ b/Weitianshi/pages/myProject/pushTo/pushTo.wxss
@@ -200,3 +200,18 @@
   transform: translateX(-50%);
   padding: 16rpx 32rpx;
 }
+.error {
+  background: #fef1d3;
+  border: 1px solid #cbc3a5;
+  border-radius: 4px;
+  font-size: 24rpx;
+  color: #666;
+  text-align: center;
+  position: fixed;
+  height:32rpx;
+   /* transform: translate(-50%,-50%);  */
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+   padding: 16rpx 32rpx; 
+}
