--- a/Weitianshi/pages/my/identity/identityEdit/identityEdit.wxml
+++ b/Weitianshi/pages/my/identity/identityEdit/identityEdit.wxml
@@ -1,8 +1,8 @@
 <view class="classname">
   <view class="visitCard flex" bindtap="scanIDcard">
     <view class="visitCardMessage">名片</view>
-    <image src="/img/icon-mingpian-n@2x.png" class="pushIdCard"></image>
-    <!-- <image src="/img/icon-mingpian-s@2x.png" class="pushIdCard"></image> -->
+    <image src="/img/icon-mingpian-n@2x.png" class="pushIdCard" wx:if="{{upLoadSuccess == false}}"></image>
+    <image src="/img/icon-mingpian-s@2x.png" class="pushIdCard" wx:if="{{upLoadSuccess == true}}"></image>
   </view>
   <view class="personList">
     <view class="userBox">
