--- a/Weitianshi/pages/my/identity/identityEdit/identityEdit.wxss
+++ b/Weitianshi/pages/my/identity/identityEdit/identityEdit.wxss
@@ -14,7 +14,7 @@
 }
 
 .pushIdCard {
-  background: #ccc;
+  /* background: #ccc; */
   border-radius: 4rpx;
   width: 56rpx;
   height: 44rpx;
@@ -102,7 +102,7 @@
   text-align: center;
   position: fixed;
   /* top: 1126rpx; */
-  bottom:0;
+  bottom: 0;
 }
 
 .personListContentAfter {
@@ -128,12 +128,28 @@
   color: #666;
   line-height: 112rpx;
   text-align: right;
- 
   margin-right: 12rpx;
 }
-.overMore{
- text-overflow: ellipsis;
+
+.overMore {
+  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  width:470rpx;
+  width: 470rpx;
+}
+
+.error {
+  background: #fef1d3;
+  border: 1px solid #cbc3a5;
+  border-radius: 4px;
+  font-size: 24rpx;
+  color: #666;
+  text-align: center;
+  position: fixed;
+  height: 32rpx;
+  /* transform: translate(-50%,-50%);  */
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 16rpx 32rpx;
 }
