--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -515,77 +515,73 @@
 <!--我申请查看的项目+推送給我的 +匹配推荐 + 精选-->
 <template name="personModal">
   <block wx:for="{{list}}"  wx:key="{{index}}"> 
-  <!-- wx:if="{{item.handle_status != 2}}"   -->
-    <view  class="{{item.push_id ==  push_id ? 'hide':''}}" >
-      <view class="outBox">
-        <view class="redPoint" wx:if="{{type != 2}}"  wx:if="{{item.message_status ==0 }}"></view>
-        <view class="insideBox">
-        <view  data-project="{{item.project_id}}"  catchtap="projectDetail">
-          <view class="flex">
-            <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
-            <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
-            <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 2}}"></image>
-          </view>
-          <view class="allIndustry" style="text-align:left">
-            <block wx:for="{{item.pro_industry}}" wx:key="{{index}}"wx:for-item ='industry'>
-              <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index < item.pro_industry.length-1}}">{{industry.industry_name}}、</label> 
-              <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index == item.pro_industry.length-1}}">{{industry.industry_name}}</label>
-            </block>
-          </view>
-          <view class="allProjectDetail flex"  wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
-            <view class="{{item.pro_scale.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"  wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}}</view>
-            <view class="{{item.pro_finance_stock_after.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"   wx:if="{{item.pro_finance_stock_after != ''}}">{{item.pro_finance_stock_after}}%</view>
-            <view class="{{item.pro_stage.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"  wx:if="{{item.pro_stage != ''}}">{{item.pro_stage.stage_name}}</view>
-            <view class="{{item.pro_area.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"  wx:if="{{item.pro_area != ''}}">{{item.pro_area.area_title}}</view>
-          </view>
-          <view class="flex otherInfo">
-            <view >
-              <image src="{{item.user.investor_logo_url}}" class="others_pic"  wx:if="{{item.user.investor_logo_url}}"/>
-              <view class="flex user_image" wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
-            </view>
-            <view>
-              <view class="flex userInfo">
-                <view class="userName">{{item.user.user_name}}</view>
-                <view class="userCareer">{{item.user.user_career}}</view>
-                <view class="userCompany" style="text-align:left">{{item.user.user_company}}</view>
-              </view>
-            </view>
-          </view>
-          </view>
-          <!--推送给我的项目  -->
-          <view class="projectInfo flex" wx:if="{{type == 0}}">
-            <view class="seeNum">{{item.view_count}}人看过项目</view>
-            <view class="interest flex">
-
-              <view class="btnNoInterest" catchtap="interesting"   data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}">没兴趣</view>
-              <view class="btnHaveInterest" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}">感兴趣</view>
-              <view class="haveInterest"  wx:if="{{item.handle_status == 1}}">感兴趣</view> 
-            </view>
-          </view>
-          <!--我申请查看的项目  -->
-          <view class="projectInfo flex" wx:if="{{type == 1}}">
-            <view class="seeNum">{{item.view_count}}人看过项目</view>
-            <view class="interest flex">
-              <view class="appling" wx:if="{{item.handle_status == 0}}">申请中</view>
-              <view class="agreeToRead" wx:if="{{item.handle_status == 1}}" >同意查看</view>
-              <view class="refuseMe" wx:if="{{item.handle_status == 2}}">拒绝</view>
-            </view>
-          </view>
-          <!--匹配推荐  -->
-          <view class="projectInfo flex" wx:if="{{type == 2}}">
-            <view class="seeNum">{{item.view_count}}人看过项目</view>
-            <view class="interest flex">
-              <view class="appling" wx:if="{{item.relationship_button == 0}}">申请中</view>
-              <view class="toAccreditation" wx:if="{{item.relationship_button == 4}}"  data-project="{{item.project_id}}" catchtap="matchApply" data-content="{{0}}">申请查看</view>
-              <view class="refuseToRead" wx:if="{{item.relationship_button == 1}}">同意查看</view>
-              <view class="refuseToRead readed" wx:if="{{item.relationship_button == 3}}">推送给我</view>
-              <view class="toAccreditation" wx:if="{{item.relationship_button == 2}}" data-project="{{item.project_id}}" data-content="{{1}}" catchtap="matchApply">重新申请</view>
-            </view>
-          </view>
-          <view class="classname" wx:if="{{type == 3}}"></view>
+    <view class="outBox"  wx:if="{{item.handle_status != 2 }}">
+      <view class="redPoint" wx:if="{{type != 2}}"  wx:if="{{item.message_status ==0 }}"></view>
+      <view class="insideBox">
+      <view  data-project="{{item.project_id}}"  catchtap="projectDetail">
+        <view class="flex">
+          <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
+          <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
+          <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 2}}"></image>
         </view>
-        <view id="time">{{item.created_at}}</view>
+        <view class="allIndustry" style="text-align:left">
+          <block wx:for="{{item.pro_industry}}" wx:key="{{index}}"wx:for-item ='industry'>
+            <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index < item.pro_industry.length-1}}">{{industry.industry_name}}、</label> 
+            <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index == item.pro_industry.length-1}}">{{industry.industry_name}}</label>
+          </block>
+        </view>
+        <view class="allProjectDetail flex"  wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
+          <view class="{{item.pro_scale.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"  wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}}</view>
+          <view class="{{item.pro_finance_stock_after.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"   wx:if="{{item.pro_finance_stock_after != ''}}">{{item.pro_finance_stock_after}}%</view>
+          <view class="{{item.pro_stage.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"  wx:if="{{item.pro_stage != ''}}">{{item.pro_stage.stage_name}}</view>
+          <view class="{{item.pro_area.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"  wx:if="{{item.pro_area != ''}}">{{item.pro_area.area_title}}</view>
+        </view>
+        <view class="flex otherInfo">
+          <view >
+            <image src="{{item.user.investor_logo_url}}" class="others_pic"  wx:if="{{item.user.investor_logo_url}}"/>
+            <view class="flex user_image" wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
+          </view>
+          <view>
+            <view class="flex userInfo">
+              <view class="userName">{{item.user.user_name}}</view>
+              <view class="userCareer">{{item.user.user_career}}</view>
+              <view class="userCompany" style="text-align:left">{{item.user.user_company}}</view>
+            </view>
+          </view>
+        </view>
+        </view>
+        <!--推送给我的项目  -->
+        <view class="projectInfo flex" wx:if="{{type == 0}}">
+          <view class="seeNum">{{item.view_count}}人看过项目</view>
+          <view class="interest flex">
+            <view class="btnNoInterest" catchtap="interesting"   data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}">没兴趣</view>
+            <view class="btnHaveInterest" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}">感兴趣</view>
+            <view class="haveInterest"  wx:if="{{item.handle_status == 1}}">感兴趣</view> 
+          </view>
+        </view>
+        <!--我申请查看的项目  -->
+        <view class="projectInfo flex" wx:if="{{type == 1}}">
+          <view class="seeNum">{{item.view_count}}人看过项目</view>
+          <view class="interest flex">
+            <view class="appling" wx:if="{{item.handle_status == 0}}">申请中</view>
+            <view class="agreeToRead" wx:if="{{item.handle_status == 1}}" >同意查看</view>
+            <view class="refuseMe" wx:if="{{item.handle_status == 2}}">拒绝</view>
+          </view>
+        </view>
+        <!--匹配推荐  -->
+        <view class="projectInfo flex" wx:if="{{type == 2}}">
+          <view class="seeNum">{{item.view_count}}人看过项目</view>
+          <view class="interest flex">
+            <view class="appling" wx:if="{{item.relationship_button == 0}}">申请中</view>
+            <view class="toAccreditation" wx:if="{{item.relationship_button == 4}}"  data-project="{{item.project_id}}" catchtap="matchApply" data-content="{{0}}">申请查看</view>
+            <view class="refuseToRead" wx:if="{{item.relationship_button == 1}}">同意查看</view>
+            <view class="refuseToRead readed" wx:if="{{item.relationship_button == 3}}">推送给我</view>
+            <view class="toAccreditation" wx:if="{{item.relationship_button == 2}}" data-project="{{item.project_id}}" data-content="{{1}}" catchtap="matchApply">重新申请</view>
+          </view>
+        </view>
+        <view class="classname" wx:if="{{type == 3}}"></view>
       </view>
+      <view id="time">{{item.created_at}}</view>
     </view>
   </block>
    <view class="highBox"></view>
@@ -819,4 +815,61 @@
       </view>
     </view>
   </block>
+</template>
+
+<!--匹配推荐 + 精选  -->
+<template name="selectProject">
+  <block wx:for="{{list}}"  wx:key="{{index}}"> 
+    <view class="outBox"  wx:if="{{item.handle_status != 2 }}">
+      <view class="redPoint" wx:if="{{type != 2}}"  wx:if="{{item.message_status ==0 }}"></view>
+      <view class="insideBox">
+      <view  data-project="{{item.project_id}}"  catchtap="projectDetail">
+        <view class="flex">
+          <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
+          <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
+          <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 2}}"></image>
+        </view>
+        <view class="allIndustry" style="text-align:left">
+          <block wx:for="{{item.pro_industry}}" wx:key="{{index}}"wx:for-item ='industry'>
+            <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index < item.pro_industry.length-1}}">{{industry.industry_name}}、</label> 
+            <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index == item.pro_industry.length-1}}">{{industry.industry_name}}</label>
+          </block>
+        </view>
+        <view class="allProjectDetail flex"  wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
+          <view class="{{item.pro_scale.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"  wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}}</view>
+          <view class="{{item.pro_finance_stock_after.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"   wx:if="{{item.pro_finance_stock_after != ''}}">{{item.pro_finance_stock_after}}%</view>
+          <view class="{{item.pro_stage.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"  wx:if="{{item.pro_stage != ''}}">{{item.pro_stage.stage_name}}</view>
+          <view class="{{item.pro_area.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}"  wx:if="{{item.pro_area != ''}}">{{item.pro_area.area_title}}</view>
+        </view>
+        <view class="flex otherInfo">
+          <view >
+            <image src="{{item.user.investor_logo_url}}" class="others_pic"  wx:if="{{item.user.investor_logo_url}}"/>
+            <view class="flex user_image" wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
+          </view>
+          <view>
+            <view class="flex userInfo">
+              <view class="userName">{{item.user.user_name}}</view>
+              <view class="userCareer">{{item.user.user_career}}</view>
+              <view class="userCompany" style="text-align:left">{{item.user.user_company}}</view>
+            </view>
+          </view>
+        </view>
+        </view>
+        <!--匹配推荐  -->
+        <view class="projectInfo flex" wx:if="{{type == 2}}">
+          <view class="seeNum">{{item.view_count}}人看过项目</view>
+          <view class="interest flex">
+            <view class="appling" wx:if="{{item.relationship_button == 0}}">申请中</view>
+            <view class="toAccreditation" wx:if="{{item.relationship_button == 4}}"  data-project="{{item.project_id}}" catchtap="matchApply" data-content="{{0}}">申请查看</view>
+            <view class="refuseToRead" wx:if="{{item.relationship_button == 1}}">同意查看</view>
+            <view class="refuseToRead readed" wx:if="{{item.relationship_button == 3}}">推送给我</view>
+            <view class="toAccreditation" wx:if="{{item.relationship_button == 2}}" data-project="{{item.project_id}}" data-content="{{1}}" catchtap="matchApply">重新申请</view>
+          </view>
+        </view>
+        <view class="classname" wx:if="{{type == 3}}"></view>
+      </view>
+      <view id="time">{{item.created_at}}</view>
+    </view>
+  </block>
+   <view class="highBox"></view>
 </template>
