--- a/Weitianshi/pages/oneKeyResearch/oneKeyResearch.wxml
+++ b/Weitianshi/pages/oneKeyResearch/oneKeyResearch.wxml
@@ -19,22 +19,7 @@
                         <view class="projectDetailLine" wx:if="{{project.pro_stage.stage_name}}">{{project.pro_stage.stage_name}}</view>
                         <view class="projectDetailLine" wx:if="{{project.pro_area.area_title}}">{{project.pro_area.area_title}}</view>
                     </view>
-                   <!--  <view class="ProjectClues flex">
-                        <view class="classname">项目线索</view>
-                        <view class="ProjectCluesLine"></view>
-                        <view class="classname">佣金收讫</view>
-                    </view> -->
                 </view>
-               <!--  <view class="ProjectDetailInfo flex">
-                    <view class="flex sceenPerson" data-proid="{{id}}">
-                        <view class="viewTimeNew" wx:if="{{project.count.view_times_new != 0}}">+{{count.view_times_new}}</view>
-                        <view class="viewTimeAll screenPersonColor">浏览：
-                            <label>{{count.view_times_all}}</label>
-                        </view>
-                    </view>
-                    <view class="applyPerson">申请查看：-</view>
-                    <view class="investPerson">意向投资人：-</view>
-                </view> -->
             </view>
         </view>
     </view>
@@ -189,41 +174,6 @@
                             <view class="moreInfo" bindtap="moreInfo" wx:if="{{moreInfo !=4 &&project.pro_develop.length >2}}" data-id="{{4}}">展开</view>
                             <view class="moreInfo" bindtap="noMoreInfo" wx:if="{{moreInfo == 4}}" data-id="{{4}}">收起</view>
                         </view>
-                        <!--FA签约-->
-                        <!-- <view class="signFA" wx:if="{{project.pro_FA.commission !=0||project.pro_FA.stock_right !=0||project.pro_FA.stock_other!=0||project.pro_FA.stock_follow !=0}}">
-                            <view class="signFABox flex">
-                                <image src="/img/img-money.png" class="titlePic"></image>
-                                <view class="title">FA签约</view>
-                            </view>
-                            <view class="signFAcontentAll" wx:if="{{project.pro_FA.commission !=0||project.pro_FA.stock_right !=0||project.pro_FA.stock_other!=0||project.pro_FA.stock_follow !=0}}">
-                                <view class="flex">
-                                    <view class="whiteContent">
-                                        <view class="conBox flex">
-                                            <view class="textFAContent">
-                                                <view class="textTab">签约佣金</view>
-                                                <view class="textNum" wx:if="{{project.pro_FA.commission}}">{{project.pro_FA.commission}}%</view>
-                                                <view class="textNum" wx:if="{{!project.pro_FA.commission}}">-</view>
-                                            </view>
-                                            <view class="textFAContent">
-                                                <view class="textTab">股权赠与</view>
-                                                <view class="textNum" wx:if="{{project.pro_FA.stock_right!=0}}">{{project.pro_FA.stock_right}}%</view>
-                                                <view class="textNum" wx:if="{{project.pro_FA.stock_right==0}}">-</view>
-                                            </view>
-                                            <view class="textFAContent">
-                                                <view class="textTab">其他权益</view>
-                                                <view class="textNum" wx:if="{{project.pro_FA.stock_other!=0}}">{{project.pro_FA.stock_other}}%</view>
-                                                <view class="textNum" wx:if="{{project.pro_FA.stock_other==0}}">-</view>
-                                            </view>
-                                            <view class="textFAContent">
-                                                <view class="textTab">跟投权</view>
-                                                <view class="textNum" wx:if="{{project.pro_FA.stock_follow!=0}}">{{project.pro_FA.stock_follow}}%</view>
-                                                <view class="textNum" wx:if="{{project.pro_FA.stock_follow==0}}">-</view>
-                                            </view>
-                                        </view>
-                                    </view>
-                                </view>
-                            </view>
-                        </view> -->
                     </view>
                     <view style="height:24rpx;"></view>
                 </view>
@@ -232,7 +182,7 @@
         <!--一键尽调页面的内容-->
         <swiper-item>
             <scroll-view scroll-y="true">
-                <view id="oneKey" wx:if="{{nothing != 0}}">
+                <view id="oneKey" wx:if="{{oneKey===true}}">
                     <view class="projectDetailsBox" wx:if="{{projectDetailsList.length != 0}}">
                         <view class="boxName">项目信息</view>
                         <view class="pro_sorts flex" wx:if="{{project_labelArray !=0}}">
@@ -253,18 +203,6 @@
                                 <image src="/img/icon-lingyu@2x.png" class="oneKeyIcon"></image>
                                 <label>{{projectDetailsOne.project_industry}}</label>
                             </view>
-                            <!--<view class="projectInfoText flex">
-              <image src="/img/icon-jine@2x.png" class="oneKeyIcon"></image>
-              <label>{{company.company_registered_capital}}
-                <label>|</label>
-              </label>
-              <label>{{project.pro_stage.stage_name}}
-                <label>|</label>
-              </label>
-              <label>{{project.pro_area.area_title}}
-                <label>|</label>
-              </label>
-            </view>-->
                             <view class="companyNet" wx:if="{{projectDetailsOne.project_website}}">
                                 <image src="/img/icon-wangzhan@2x.png" class="oneKeyIcon"></image>
                                 {{projectDetailsOne.project_website}}
@@ -401,7 +339,6 @@
                                         <view class="companyEstablishText" wx:if="{{company.company_register_office}}">{{company.company_register_office}}</view>
                                         <view class="companyEstablishText" wx:if="{{!company.company_register_office}}">-</view>
                                     </view>
-
                                 </view>
                                 <view class="companyIntroduceRight">
                                     <view class="companyEstablishTitle">企业类型
@@ -441,7 +378,6 @@
                             </view>
                         </view>
                     </view>
-
                     <!--历史融资-->
                     <view class="historyFinance" wx:if="{{historyFinance.length != 0}}">
                         <view class="boxName">历史融资</view>
@@ -535,7 +471,7 @@
                         <view class="moreInfo" catchtap="noCheckMore" wx:if="{{competitorMore == 3}}" data-id="{{3}}">收起</view>
                     </view>
                 </view>
-                <view class="noMessage" wx:if="{{nothing == 0}}">
+                <view class="noMessage" wx:if="{{oneKey===false}}">
                     <image src="/img/img-kong@2x.png" class="nothing"></image>
                     <view class="hasNoFind">暂未调查到相关信息</view>
                 </view>
@@ -543,7 +479,6 @@
         </swiper-item>
     </swiper>
 </view>
-
 <!--公司信息-->
 <view class="modal" wx:if="{{sendCompany == 1}}">
     <view class="bpModal">
@@ -567,7 +502,6 @@
         <view class="bpModalBox">
             <view class="bpModalText">BP会发送到您的邮箱</view>
             <input class="writeBpEmail" value="{{userEmail}}" bindinput="writeBpEmail" placeholder="请输入邮箱" />
-
             <view class="choiceBox">
                 <view class="flex">
                     <view class="bpModalCancel" bindtap="bpModalCancel" data-index="0">取消</view>
