--- a/Weitianshi/pages/message/potentialProject/potentialProject.wxss
+++ b/Weitianshi/pages/message/potentialProject/potentialProject.wxss
@@ -145,7 +145,7 @@
 
 .allProjectDetail {
   font-size: 26rpx;
-  color: #666;
+  color:#999999;
   line-height: 26rpx;
   text-align: left;
   margin-bottom: 34rpx;
@@ -203,11 +203,12 @@
 .btnHaveInterest, .btnNoInterest {
   font-size: 24rpx;
   color: #40587a;
-  border: 1px solid black;
+  border: 1px solid #40587A;
   height: 52rpx;
   line-height: 52rpx;
   padding: 0 32rpx;
   margin: 20rpx 24rpx 0 185rpx;
+  border-radius: 4rpx;
 }
 
 .btnHaveInterest {
@@ -489,4 +490,5 @@
   background: #f2f2f2;
   line-height: 40rpx;
   text-align: center;
+   color:#40587a;
 }
