--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -515,7 +515,7 @@
 <!--我申请查看的项目+推送給我的 +匹配推荐 + 精选-->
 <template name="personModal">
   <block wx:for="{{list}}"  wx:key="{{index}}"> 
-    <view class="outBox"  wx:if="{{item.handle_status != 2 }}">
+    <view class="outBox" >
       <view class="redPoint" wx:if="{{type != 2}}"  wx:if="{{item.message_status ==0 }}"></view>
       <view class="insideBox">
       <view  data-project="{{item.project_id}}"  catchtap="projectDetail">
