--- a/Weitianshi/pages/message/potentialProject/potentialProject.wxss
+++ b/Weitianshi/pages/message/potentialProject/potentialProject.wxss
@@ -492,3 +492,14 @@
   text-align: center;
    color:#40587a;
 }
+
+.refuseMe {
+  font-size: 24rpx;
+  color: #999;
+  line-height: 24rpx;
+  text-align: center;
+  position: absolute;
+  top: 34rpx;
+  right: 16rpx;
+  white-space:nowrap;
+}
