--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxml
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxml
@@ -37,7 +37,7 @@
             </view>
           </view>
           <view class="flex sceenPerson" catchtap="applyPerson">
-            <view class="viewTimeNew" wx:if="{{project.count.apply_times_new != 0}}">+{{count.apply_times_new}}</view>
+            <view class="applyProjectNew" wx:if="{{project.count.apply_times_new != 0}}">+{{count.apply_times_new}}</view>
             <view class="viewTimeAll screenPersonColor"  data-proid="{{id}}">申请查看：
               <label>{{count.apply_times_all}}</label>
             </view>
