--- a/Weitianshi/pages/my/identity/identityEdit/identityEdit.wxss
+++ b/Weitianshi/pages/my/identity/identityEdit/identityEdit.wxss
@@ -139,17 +139,16 @@
 }
 
 .error {
-  background: #fef1d3;
-  border: 1px solid #cbc3a5;
+  background: rgba(0, 0, 0, 0.80);
   border-radius: 4px;
-  font-size: 24rpx;
-  color: #666;
   text-align: center;
   position: fixed;
-  height: 32rpx;
-  /* transform: translate(-50%,-50%);  */
+  height: 45rpx;
+  line-height: 45rpx;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   padding: 16rpx 32rpx;
-}
+  font-size: 28rpx;
+  color: #fff;
+  }
