--- a/Weitianshi/pages/myProject/pushTo/pushTo.wxss
+++ b/Weitianshi/pages/myProject/pushTo/pushTo.wxss
@@ -201,17 +201,16 @@
   padding: 16rpx 32rpx;
 }
 .error {
-  background: #fef1d3;
-  border: 1px solid #cbc3a5;
+  background: rgba(0, 0, 0, 0.80);
   border-radius: 4px;
-  font-size: 24rpx;
-  color: #666;
   text-align: center;
   position: fixed;
-  height:32rpx;
-   /* transform: translate(-50%,-50%);  */
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-   padding: 16rpx 32rpx; 
-}
+  height: 45rpx;
+  line-height: 45rpx;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 16rpx 32rpx;
+  font-size: 28rpx;
+  color: #fff;
+  }
