--- a/Weitianshi/pages/myProject/pushTo/pushTo.wxss
+++ b/Weitianshi/pages/myProject/pushTo/pushTo.wxss
@@ -112,8 +112,11 @@
   background: #40587a;
   width: 100%;
   height: 54rpx;
-  padding-top: 34rpx;
+  /* padding-top: 34rpx; */
   justify-content: center;
+  padding:34rpx 0 0 0;
+  line-height:54rpx;
+  box-sizing:unset;
 }
 
 .pushProjectAfter {
@@ -214,3 +217,8 @@
   font-size: 28rpx;
   color: #fff;
   }
+  
+
+button[disabled][type="default"], wx-button[disabled]:not([type]) {
+  background: #40587a;
+}
